# ERA-v4

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: plan basic.md  plan-opus4.1.md  plan-sonnet4.md  plan.md
notebooks/week00/: 00_mac_torch_gpu_acceleration.ipynb  01_mlp_xor.ipynb  02_pytorch_mlp.ipynb  README.md
notebooks/week01/: 01_mlp_xor.ipynb  02_pytorch_mlp.ipynb  README.md
requirements/: all.txt  base.txt  cv.txt  deploy.txt  dev.txt  minimal.txt  nlp.txt  rl.txt
scripts/: clean_notebooks.sh
src/era_v4/: __init__.py
src/era_v4/utils/: __init__.py
tests/: test_package.py
