[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era-v4"
version = "0.2.0"
description = "ERA V4 study repository with notebooks and reusable utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ERA V4" }]
license = { text = "AGPL-3.0-or-later" }
keywords = ["deep-learning", "pytorch", "notebooks", "education"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["era_v4*"]

[tool.black]
line-length = 100
target-version = ["py313", "py312"]
include = "\\.pyi?$"
exclude = "(^/.venv/|^/venv/|^/build/|^/dist/)"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["era_v4"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
    "models",
    "outputs",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
